@@ -1,3 +1,7 @@
+2006-03-17  David Reveman  <davidr@novell.com>
+
+	* src/window.c (stackAncestors): Never raise desktop windows.
+
 2006-03-16  David Reveman  <davidr@novell.com>
 
 	* plugins/minimize.c:
